app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

  @import url(https://fonts.googleapis.com/css?family=Lobster+Two:700);
  @import url(https://fonts.googleapis.com/css?family=Cabin);

//  @font-face {
//      font-family: "lobster_tworegular";
//      src: url('fonts/lobstertwo-regular-webfont.eot');
//      src: url('fonts/lobstertwo-regular-webfont.eot?#iefix') format('embedded-opentype'),
//           url('fonts/lobstertwo-regular-webfont.woff2') format('woff2'),
//           url('fonts/lobstertwo-regular-webfont.woff') format('woff'),
//           url('fonts/lobstertwo-regular-webfont.ttf') format('truetype'),
//           url('fonts/lobstertwo-regular-webfont.svg#lobster_tworegular') format('svg');
//      font-weight: normal;
//      font-style: normal;
//  }
//
//  @font-face {
//     font-family: cabinbold;
//     src: url('fonts/cabin-bold-webfont.eot');
//     src: url('fonts/cabin-bold-webfont.eot?#iefix') format('embedded-opentype'),
//          url('fonts/cabin-bold-webfont.woff2') format('woff2'),
//          url('fonts/cabin-bold-webfont.woff') format('woff'),
//          url('fonts/cabin-bold-webfont.ttf') format('truetype'),
//          url('fonts/cabin-bold-webfont.svg#cabinbold') format('svg');
//     font-weight: normal;
//     font-style: normal;
//
// }
//
// @font-face {
//     font-family: cabinregular;
//     src: url('fonts/cabin-regular-webfont.eot');
//     src: url('fonts/cabin-regular-webfont.eot?#iefix') format('embedded-opentype'),
//          url('fonts/cabin-regular-webfont.woff2') format('woff2'),
//          url('fonts/cabin-regular-webfont.woff') format('woff'),
//          url('fonts/cabin-regular-webfont.ttf') format('truetype'),
//          url('fonts/cabin-regular-webfont.svg#cabinregular') format('svg');
//     font-weight: normal;
//     font-style: normal;
//
// }

html {
  background-color: rgb(250, 240, 209);
  color: rgb(141, 87, 148);
  box-sizing: border-box;
  font-family: 'Cabin', sans-serif;
  font-size: .75rem;
  line-height: 1.35;
  height: 100%;
  width: 100%;
}


.navcontainer ul {
margin: 0;
padding: 0;
list-style-type: none;
display: inline-block;
}

.navcontainer .top-right-menu {
float: right;
}

.navcontainer ul li {
  display: inline;
}

.site-header img {
  width: 100%;
}

.single-card {
  margin: 0 5%;
}

.single-card ul {
  // position:
  display: inline-grid;
  border-radius: 10px;
  margin: .5rem;
  padding: 1rem;
  border: 5px;
  background-color: white;
  height: 250px;
  width: 150px;
  float: left;
  list-style-type: none;
  text-align: center;
  overflow-y: auto;
}

.single-card li {
  margin: 5%;

}

.index-cards {
  margin: 0 5%;
  width: 90%;
  text-align: center;
}

div.search-listings {
  text-align: center;
}

div.single-card ul li:hover {
  z-index: 5;
  -webkit-transition: all 0.1s ease-in-out;
  -moz-transition: all 0.1s ease-in-out;
  -o-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
  margin-top: -0.5%;
  // margin-bottom: 2.5%;
}

a {
  color: rgba(1,84,90,1);
    text-decoration: none;
}

h1 {
  font-family: 'Lobster Two', cursive;
  font-size: 2.5rem;
  // font-family: lobster_tworegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
}
//
// div.search-listings{
//   float: right;
// }

#map-index {
  height: 250px;
  width: 90%;
  margin: 0 5%;
}

#map-show {
  height: 250px;
  width: 90%;
  margin: 0 5%;
}


input, select, textarea {
  background-color: white;
}

@media (min-width: 700px) {
  .site-header {
    width: 500px;
    margin: 0 25%;
  }
}

@media only screen and (max-width: 500px) {
.single-card ul {

  width: 85%;
  margin: .5rem 5%;
}
}

// .navcontainer input,
// .navcontainer label {
//   display: none;
//   width: 40px;
//   height: 40px;
//   color: #fff;
//   text-align: center;
//   line-height: 40px;
//   font-size: 1.6rem;
//   border-radius: 5px;
// }
// .navcontainer label {
//   position: absolute;
//   top: 22px;
//   right: 20px;
//   background: #000;
// }
// .navcontainer label:hover {
//   cursor: pointer;
//   transition: background .2s;
//   background: crimson;
// }
// .navcontainer label:before {
//   font-family: FontAwesome;
//   font-size: 24px;
//   content: "\f0c9";
//   text-align: center;
// }
// .navcontainer input[type="checkbox"]:checked + .top-right-menu + label:hover:before {
//   content: "\f00d";
// }
//   @media only screen and (max-width: 768px) {
//
//
//   	  .navcontainer:before, .navcontainer:after {display:none;}
//
//   		.navcontainer ul {
//   				display: block;
//   				padding: 18px 0 0 0;
//   		}
//   		.top-right-menu {
//   				transition: all .3s;
//   				position: absolute;
//   				z-index: 1000;
//   				top: 0;
//   				min-height: 100vh;
//   				left: 100%;
//   				background: #fff;
//   		}
//   		.top-right-menu li {
//   				flex: none;
//   			width:100%;
//   		}
//   		.navcontainer input[type="checkbox"]:checked + .main-menu {
//   				transform:translate(-100%);
//   				min-width: 50%;
//   		}
//   		.navcontainer label {
//   				display: block;
//   				z-index: 2000;
//   				transition: .2s;
//   		}
//     }

